# routes/api.php
@@ -6,40 +6,37 @@ use App\Http\Controllers\API\APIErrorResponseController;
 use App\Http\Controllers\API\APIProductoController as APIAPIProductoController;
 use App\Http\Controllers\API\APITestController;
 use App\Http\Controllers\API\Bodega\APIProductoController as BodegaAPIProductoController;
+use App\Http\Controllers\API\Musicpro\APIEmailController;
 use App\Http\Controllers\API\Sucursal\APIProductoController;
-
-/*
-|--------------------------------------------------------------------------
-| API Routes
-|--------------------------------------------------------------------------
-|
-| Here is where you can register API routes for your application. These
-| routes are loaded by the RouteServiceProvider within a group which
-| is assigned the "api" middleware group. Enjoy building your API!
-|
-*/
-
-// Route::middleware('auth:sanctum')->get('/user', function (Request $request) {
-//     return $request->user();
-// });
 
 Route::post('/product/find',[APIProductoController::class,'find'])->name('api.v1.product.find');
 
-// TEST INICIALES
-Route::get('/v1/test/saludo',[APITestController::class,'saludo'])->name('api.v1.test.saludo');
-Route::get('/v1/test/saldo',[APITestController::class,'saldo'])->name('api.v1.test.saldo');
-Route::any('/v1/test/parametro/{id}',[APITestController::class,'parametro'])->name('api.v1.test.parametro');
+Route::prefix('/v1')->name('api.v1.')->group( function () {
 
-// ERROR TEST
-Route::any('/v1/test/error/bad_request',[APIErrorResponseController::class,'badRequest'])->name('api.v1.test.error.badRequest');
-Route::any('/v1/test/error/not_found',[APIErrorResponseController::class,'notFound'])->name('api.v1.test.error.notFound');
-Route::any('/v1/test/error/unauthorized',[APIErrorResponseController::class,'unauthorized'])->name('api.v1.test.error.unauthorized');
-Route::any('/v1/test/error/forbidden',[APIErrorResponseController::class,'forbidden'])->name('api.v1.test.error.forbidden');
+  Route::prefix('/test')->name('test.')->group( function () {
+    // TEST INICIALES
+    Route::get('saludo',[APITestController::class,'saludo'])->name('saludo');
+    Route::get('saldo',[APITestController::class,'saldo'])->name('saldo');
+    Route::any('parametro/{id}',[APITestController::class,'parametro'])->name('parametro');
+
+    // Route::get('user',[APITestController::class,'index'])->name('api.v1.test.index');
+
+    // ERROR TEST
+    Route::any('error/bad_request',[APIErrorResponseController::class,'badRequest'])->name('error.badRequest');
+    Route::any('error/not_found',[APIErrorResponseController::class,'notFound'])->name('error.notFound');
+    Route::any('error/unauthorized',[APIErrorResponseController::class,'unauthorized'])->name('error.unauthorized');
+    Route::any('error/forbidden',[APIErrorResponseController::class,'forbidden'])->name('error.forbidden');
+  });
+
+  // BODEGA
+  Route::any('bodega/producto',[BodegaAPIProductoController::class,'index'])->name('bodega.producto.index');
 
 
-// BODEGA
-Route::any('/v1/bodega/producto',[BodegaAPIProductoController::class,'index'])->name('api.v1.bodega.producto.index');
+  Route::post('musicpro/send_email',[APIEmailController::class,'index'])->name('musicpro.index');
+});
 
 
 
-Route::get('/v1/test/user',[APITestController::class,'index'])->name('api.v1.test.index');
+
+
+
